@@ -2,6 +2,7 @@
  - BREAKING CHANGE: Due to the new imputation of nan-valued features,
    rating inference might change slightly. For the "zef18" dataset,
    inference was off by about 0.1 on average.
+ - fix: bad data caused TypeError in numpy.polynomial (#25)
  - enh: impute nan-valued feature data if corresponding response was 0
  - enh: allow empty-valued groups in rating HDF5 file
  - enh: when encountering inf values in a training set, replace them
